--- a/HVHV_00_001_geoinfosysteemid.tex
+++ b/HVHV_00_001_geoinfosysteemid.tex
@@ -75,7 +75,6 @@
   \thm@postskip=\thm@preskip
 }
 \makeatother
-\renewcommand\refname{Kirjandus}
 \usepackage[]{natbib}
 \bibliographystyle{plainnat}
 
@@ -129,7 +128,7 @@
 
 \textbackslash begin\{figure\}
 
-\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/example_lotr_uuemaa}
+\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/example_lotr_uuemaa}
 
 \}
 
@@ -140,7 +139,7 @@ Geoinfosüsteem on \textbf{arvutipõhine süsteem ruumiliste ja mitteruumiliste 
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.8\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/gis_wordcloud_wallentin2015} 
+{\centering \includegraphics[width=0.8\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/gis_wordcloud_wallentin2015} 
 
 }
 
@@ -149,7 +148,7 @@ Geoinfosüsteem on \textbf{arvutipõhine süsteem ruumiliste ja mitteruumiliste 
 
 \textbackslash begin\{figure\}
 
-\{\centering \includegraphics[width=0.8\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/GISwordcloud}
+\{\centering \includegraphics[width=0.8\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/GISwordcloud}
 
 \}
 
@@ -174,7 +173,7 @@ Andmete
 
 \textbackslash begin\{figure\}
 
-\{\centering \includegraphics[width=0.75\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/intro_GISumbrella}
+\{\centering \includegraphics[width=0.75\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/intro_GISumbrella}
 
 \}
 
@@ -185,7 +184,7 @@ Ehkki vahel käsitletakse geoinfosüsteeme kui mingit kindlat tarkvara (nt ArcVi
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/arcgis_logo} \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/qgis_logo} \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/grassgis_logo} \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/Rlogo} 
+{\centering \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/arcgis_logo} \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/qgis_logo} \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/grassgis_logo} \includegraphics[width=0.25\linewidth,height=0.5\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/Rlogo} 
 
 }
 
@@ -196,7 +195,7 @@ Kuigi GIS võib talletada ka mitteruumilist infot, moodustavad kõige olemusliku
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.75\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/gis_natgeo} 
+{\centering \includegraphics[width=0.75\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/gis_natgeo} 
 
 }
 
@@ -207,7 +206,7 @@ Nagu öeldud, võivad GIS-andmebaasid sisaldada nii ruumilist kui ka mitteruumil
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/qgis_attribute_table} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/qgis_attribute_table} 
 
 }
 
@@ -221,7 +220,7 @@ Infotehnoloogia arenguga on muutunud võimalikuks säilitada digitaalsel kujul a
 
 \textbackslash begin\{figure\}
 
-\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/Timeline-of-major-GIS-events}
+\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/Timeline-of-major-GIS-events}
 
 \}
 
@@ -283,7 +282,7 @@ Ehkki mingites humanitaaria valdkondades (nt arheoloogia) on ka geoinfosüsteemi
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/keegi_allatiiv} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/keegi_allatiiv} 
 
 }
 
@@ -298,11 +297,11 @@ Siiski on vahest enamgi neid, kes ühel või teisel moel ruumiandmeid ja geoinfo
 \subsection{Arheoloogia}\label{arheoloogia}}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/arheo_example_teemakaart_kimber} \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/arheo_example_kimber_lohukivid_totalviewshed} \caption{Muististe jaotumise visualiseerimine  ja maastiku nähtavuse analüüsimine [@Kimber2016, jn 5]}\label{fig:arheo-example}
+\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/arheo_example_teemakaart_kimber} \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/arheo_example_kimber_lohukivid_totalviewshed} \caption{Muististe jaotumise visualiseerimine  ja maastiku nähtavuse analüüsimine [@Kimber2016, jn 5]}\label{fig:arheo-example}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/arheo_example_haav_asulate_mudel} \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/arheo_example_rosentau2013} \caption{Muinasaegsete asulakohtade ennustav mudeldamine [@Haav2014, jn 11] ja kiviaegse maastiku rekonstruktsioonid (9700 - 5300 eKr) [@Rosentau2013, jn 7]}\label{fig:arheo-example2}
+\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/arheo_example_haav_asulate_mudel} \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/arheo_example_rosentau2013} \caption{Muinasaegsete asulakohtade ennustav mudeldamine [@Haav2014, jn 11] ja kiviaegse maastiku rekonstruktsioonid (9700 - 5300 eKr) [@Rosentau2013, jn 7]}\label{fig:arheo-example2}
 \end{figure}
 
 \hypertarget{veel-nuxe4iteid}{%
@@ -310,7 +309,7 @@ Siiski on vahest enamgi neid, kes ühel või teisel moel ruumiandmeid ja geoinfo
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.75\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/example_france_trains_geddes2014} 
+{\centering \includegraphics[width=0.75\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/example_france_trains_geddes2014} 
 
 }
 
@@ -319,7 +318,7 @@ Siiski on vahest enamgi neid, kes ühel või teisel moel ruumiandmeid ja geoinfo
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/example_moncla_paris_street_mentions} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/example_moncla_paris_street_mentions} 
 
 }
 
@@ -489,7 +488,7 @@ Need kaks lähenemist on aluseks sellele, kuidas ruumiobjekte geoinfosüsteemis 
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/Bolstad2016} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/Bolstad2016} 
 
 }
 
@@ -514,7 +513,7 @@ Geomeetrilisi põhiobjekte ehk primitiive on 3:
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/points_lines_polygons} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/points_lines_polygons} 
 
 }
 
@@ -529,7 +528,7 @@ Joon(t)est omakorda saab moodustada \textbf{polügooni}, mispuhul joone algus- j
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.6\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/Bolstad2016_pointslinespolygons} 
+{\centering \includegraphics[width=0.6\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/Bolstad2016_pointslinespolygons} 
 
 }
 
@@ -540,7 +539,7 @@ Geomeetrilise objekti valik sõltub sealjuures sellest, kui täpselt mingit andm
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/pringi1} \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/pringi2} 
+{\centering \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/pringi1} \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/pringi2} 
 
 }
 
@@ -549,7 +548,7 @@ Geomeetrilise objekti valik sõltub sealjuures sellest, kui täpselt mingit andm
 
 \textbackslash begin\{figure\}
 
-\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/pringi3}
+\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/pringi3}
 
 \}
 
@@ -564,7 +563,7 @@ Teine levinud viis andmeid struktureerida on kasutada \textbf{topoloogilisi suht
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/spaghetti_topological} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/spaghetti_topological} 
 
 }
 
@@ -592,7 +591,7 @@ Rastermudel peaks olema tõenäoliselt juba tuttav, kui oled kokku puutunud näi
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/raster_model} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/raster_model} 
 
 }
 
@@ -605,7 +604,7 @@ See, kui täpselt rastermudel mingile reaalse maailma andmeobjekti kujule vastab
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/Bolstad2016_rasters} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/Bolstad2016_rasters} 
 
 }
 
@@ -617,7 +616,7 @@ Satelliitide põhjal on võimalik kuvada suurt hulka maapinna omadusi ja protses
 
 \textbackslash begin\{figure\}
 
-\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/satelliit}
+\{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/satelliit}
 
 \}
 
@@ -630,7 +629,7 @@ Aerofotosid saab teha näiteks õhupallist, kopterist või lennukist ning lisaks
 
 \begin{figure}
 
-{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/aerofoto_ortofoto} 
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/aerofoto_ortofoto} 
 
 }
 
@@ -643,7 +642,7 @@ Rastreid võib aga saada ka \textbf{vektorandmete teisendamisel või interpoleer
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/chat1_points} \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/chat2_raster} 
+{\centering \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/chat1_points} \includegraphics[width=0.45\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/chat2_raster} 
 
 }
 
@@ -710,13 +709,13 @@ kaardid suhteliselt robustsed
 Paljud tänapäeva GIS-tehnoloogiad võimaldavad kasutada mõlemat mudelit paralleelselt. Näiteks digitaalsed maastikumudelid kuvavad sageli rasterandmete abil mingi piirkonna reljeefi või maakasutust, punktide abil huvipakkuvaid hooneid, joonte abil jõgesid ja teid ning polügoonide abil haldusjaotust. Sealjuures võib otsustada, kas kuvada näiteks kirikud, haiglad ja haridusasutused eraldi kihtidel või ühe kihina, milles sisaldub hoone funktsiooni määrav atribuut.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/arheo_example_kimber_lohukivid_totalviewshed} \caption{Maastiku nähtavuse analüüsimine [@Kimber2016, jn 5]}\label{fig:arheo-ex}
+\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/arheo_example_kimber_lohukivid_totalviewshed} \caption{Maastiku nähtavuse analüüsimine [@Kimber2016, jn 5]}\label{fig:arheo-ex}
 \end{figure}
 
 Samuti võib üht ja sama nähtust kuvada erinevat moodi.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/geohumcourse/imgs/okabe_2006} \caption{Tänavaröövid Saitamas [@Okabe2006 : 8]}\label{fig:unnamed-chunk-3}
+\includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/okabe_2006} \caption{Tänavaröövid Saitamas [@Okabe2006 : 8]}\label{fig:unnamed-chunk-3}
 \end{figure}
 
 Vaata natuke \href{http://blog.ut.ee/30-maps-of-estonia-in-30-days/}{siin} ringi. Kas saad aru, millist tüüpi mudeleid on kasutatud?
@@ -733,6 +732,356 @@ Neljapäeval räägime lähemalt kaartidest ja nende omadustest ning uurime vaba
 
 \hypertarget{kirjandus-1}{%
 \section{Kirjandus}\label{kirjandus-1}}
+
+\hypertarget{kaardirakendused}{%
+\chapter{Kaardirakendused}\label{kaardirakendused}}
+
+Enne, kui hakkame rääkima sellest, kuidas juba olemasolevate veebirakendustega kaarte koostada, peame lühidalt ja sissejuhatavalt rääkima veidi sellest, \textbf{mis kaart on}.
+
+\hypertarget{kaart}{%
+\section{Kaart}\label{kaart}}
+
+Kaart on kitsamas tähenduses geograafilise informatsiooni visuaalne esitusviis. GISis on kaardid nii sisendiks kui ka väljundiks. Laiemas tähenduses võime kaardiks pidada mis tahes esitust maailmast.
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth,height=1\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/types-of-maps} 
+
+}
+
+\caption{[Erinevaid kaarte](https://geology.com/maps/types-of-maps/)}\label{fig:map-types}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth,height=1\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/paris-metro} 
+
+}
+
+\caption{[Pariisi metrookaart](http://www.urbanrail.net/eu/fr/paris/paris.htm/)}(\#fig:paris metro)
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth,height=1\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/tartu_kaart_noored} 
+
+}
+
+\caption{[Tartu kaart](https://tntk.tartu.ee/tartu-noorsootoo-keskus/reveal-youropean-cultural-heritage-enrich/tartu-kaart/)}\label{fig:noored}
+\end{figure}
+
+Kaarti tehes peame alati esmalt läbi mõtlema, mis on kaardi tegemise eesmärk ning kes on kaardi lõppkasutaja. Seejärel tuleb mõelda, mida ja mis kujul reaalsest maailmast esitame ning kui täpne peab esitus olema. Lõpuks tuleb mõelda ka tehnilistele aspektidele: mis formaadis andmed meil on kasutada, mis formaadis need andmed peavad olema kaardi tegemiseks ning mis formaadis tuleb kaart ise.
+
+GISis võime infot esitada kaardikihtidena, kusjuures ühel kihil esitatakse nähtusi, mis omavad \textbf{ühesugust ruumiobjekti tüüpi}. See tähendab, et samal kihil ei tohiks esitada näiteks jõgesid (tüüpiliselt avatud jooned) ja ehitisi (tüüpiliselt suletud jooned ehk polügoonid). Küll aga võime soovi korral esitada samal kihil näiteks kive, restorane ja kogumispunkte, mis küll olemuslikult on erinevast klassist, aga geomeetriliselt esitatavad sama tüüpi ruumiobjekti (punkti) abil. Üldiselt on tavaks esitada ühel kaardikihil siiski ka temaatiliselt sarnaseid objekte.
+
+Üha rohkem puutume tänapäeval paberkaartide asemel kokku digitaalkaartidega. Ehkki mõlemal juhul näeme kaardil seda infot, mida kaardi tegija soovib edastada, ning sellisel kujul, nagu tema vajalikuks peab, on paber- ja digitaalkaartidel olulisi erinevusi.
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/digitaal_paberkaart} 
+
+}
+
+\caption{Digitaal- vs. paberkaart [@Suurna&Sisas2010 : 26]}\label{fig:paber-digi}
+\end{figure}
+
+Kaartidel edastatakse mingit objekti või nähtust kirjeldavat informatsiooni hästi eristuvate ja loetavate leppemärkide, värvitoonide ja kirjade abil. Kaardil on aga veel mitmeid komponente, näiteks mõõtkava, suunaviit jm.
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/kaardi_komponendid} 
+
+}
+
+\caption{Kaardi komponendid [@Suurna&Sisas2010 : 33]}\label{fig:kaardi-komponendid}
+\end{figure}
+
+Kaardi \textbf{mõõtkava} näitab, kui palju reaalset objekti on vähendatud. Tavaliselt väljendatakse mõõtkava murdosa või suhtena, mis seob kaardil esitatud mingi pikkusega joonlõigu sama joonlõiguga maapinnal. Näiteks mõõtkava 1:20000 või 1/20000 näitab, et 1 ühik kaardil vastab 20000 samale ühikule reaalses maailmas. Kui ühik on cm, siis esitab 1 cm kaardil 20000 cm ehk 200 m maapinnal. Digitaalsetel kaartidel esitatakse mõõtkava sageli dünaamiliselt, mis tähendab, et mõõtkava saab sisse või välja suumides muuta. Samuti on tüüpiline mõõtkava esitamine mitte arvmõõtkavana, vaid visuaalselt: mingile ekraanil määratletud joonlõigule vastab tegelikkuses kindel vahemaa maapinnal, ent me ei pruugi täpselt näha, kui pika joonlõiguga on ekraanil tegemist.
+
+Kui liigume suurelt mõõtkavalt väiksemale, peame andmeid loetavuse huvides üldistama ning valima, mida ja mis detailsusastmega esitada. Üldistada võib lihtsustades, siludes, ühendades jne.
+
+\hypertarget{htmlwidget-ad6b0a4b17cf482b4af0}{}
+\begin{leaflet}
+
+\end{leaflet}
+
+Kaartide kujunduslikest komponentidest räägime lähemalt siis, kui ise QGISis kaarte tegema hakkame, ent üldiselt tuleks kaartide kujunduses silmas pidada lihtsust ja arusaadavust. See tähendab, et kujundid, sümbolid, värvid jm peaksid olema kujutatava nähtusega kergesti seostatavad. Muidugi võib kaarti käsitleda ka kui omalaadi kunstiteost, mispuhul kokkuleppelised ja harjumuspärased kujutusviisid võivad jääda tagaplaanile.
+
+\hypertarget{koordinaatsuxfcsteemid-ja-projektsioonid}{%
+\subsection{Koordinaatsüsteemid ja projektsioonid}\label{koordinaatsuxfcsteemid-ja-projektsioonid}}
+
+Ruumiandmed on alati seotud mingi kohaga. Maakera on kolmemõõtmeline ja põhimõtteliselt võiksime üsna hästi kasutada objektide asukoha ja omaduste kujutamiseks gloobust. See aga ei ole sageli kuigi praktiline. Kaardil, mis on märksa praktilisem visualiseerimisvahend, on üldjuhul aga ainult kaks mõõdet. Kuidas siis kolmemõõtmelist ning ebakorrapärast kujundit kujutada kahemõõtmelise ja korrapärase meediumi kaudu ning kuidas paigutada reaalse maailma objekte ja alasid nii, et saaksime kaardi põhjal öelda, kus need maakeral asuvad?
+
+Esmalt tuleb objektid ja nähtused siduda mingite koordinaatidega. \textbf{Koordinaadid} on arvud, mis määravad punkti asendi tasandil või ruumis ning \textbf{koordinaatsüsteem} vastavalt teatud reeglitel põhinev raamistik, mida nende arvude määramiseks kahe- või kolmemõõtmelises ruumis kasutatakse. Ühtse koordinaatsüsteemi abil on võimalik siduda ja koos esitada erinevaid andmeid, ent kui tahame määrata koordinaate maapinnal, siis koordinaatsüsteemist üksi ei piisa. Vaja on siduda see ka Maa kui füüsilise keha ja selle kujuga.
+
+Maa üldist kuju kirjeldab geodeetiline referentssüsteem ehk \textbf{daatum}, mis esitab Maa matemaatilise mudeli nii, et see vastaks võimalikult hästi Maa tegelikule kujule, sageli kui pöördellipsoidi või sferoidi. Erinevate ellipsoidide mõõtmed võivad pisut erineda (nt nende pooltelgede pikkused või ellipsoidi lapikus), sest Maa tegelik füüsiline kuju (geoid) on ellipsoidist märksa keerulisem. Nõnda sobivad mõned \textbf{lokaalsed} daatumid, mis ei ole tingimata seotud Maa keskpunktiga, väikesele maa-alale paremini, sest järgivad selles konkreetses kohas paremini Maa tegelikku kuju, ent ei ole jällegi hästi kasutatavad teistes kohtades.
+Eestis kasutatakse tänapäeval \textbf{globaalset} geotsentrilist ellipsoidi \textbf{GRS80}, mis on praktiliselt identne palju laialdasemalt kasutusel oleva globaalse \textbf{WGS84} ellipsoidiga.
+
+\begin{figure}
+
+{\centering \includegraphics[width=15.65in]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/geoid_ellipsoid_maapind} 
+
+}
+
+\caption{Geoid, ellipsoid ja maapind (allikas: [Maa-amet](https://geoportaal.maaamet.ee/est/Ruumiandmed/Geodeetilised-andmed/Geodeetilised-vorgud/Geoid-p287.html))}\label{fig:geoid-ellipsoid}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=13.33in]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/lokaalsed_globaalsed_daatumid} 
+
+}
+
+\caption{Erinevad daatumid: globaalne, geotsentriline WGS84 ja lokaalne NAD27 ([allikas](https://slideplayer.com/slide/3432120/))}\label{fig:daatumid}
+\end{figure}
+
+Daatumi ja sobiliku koordinaatsüsteemi abil saamegi määrata objektide asukohti Maa pinnal: teame, millise kujuga ja mõõtmetega kujutame Maad ette, ning teame ka, millistes ühikutes ja millisest nullpunktist lugedes me sellel kujul objektide asukohti määravaid koordinaate arvestame. \textbf{Geograafilised koordinaadid} on alati seotud mingi daatumiga ning aitavad meil määrata objekti asukoha, kasutades pikkus- ja laiuskraade. Pikkuskraade loetakse kahele poole Greenwichi observatooriumi meridiaani (idapikkus ja läänepikkus), laiuskraade kahele poole ekvaatorit (lõunalaius ja põhjalaius). Asukohta esitatakse kraadides (°), minutites (') ja sekundites (") või kraadides kümnendsüsteemis.
+
+\textbf{Mõtteharjutus}:
+
+\begin{quote}
+Kui iga kraad on jagatud 60 minutiks ja iga minut 60 sekundiks, siis kuidas kujutada kümnendsüsteemis koordinaate 58°22'48``N, 26°43'20''E?
+\end{quote}
+
+Selleks aga, et nüüd geograafilises ruumis paiknevaid objekte kujutada tasapinnalisel mudelil ehk kaardil, peame valima kaardi \textbf{projektsiooni}, mis määrab viisi, kuidas sfääriline pink tasapinnal esitatakse ning kuidas ruumilised koordinaadid (GCS) konverteeritakse ümber \textbf{tasapinnalisteks koordinaatideks} (PCS ehk \emph{projected coordinate system}), mida väljendatakse \emph{x}-i ja \emph{y} abil. Sisuliselt määrab projektsioon ära ka selle, milliseid alasid maakeral me oleme nõus oma kaardil rohkem moonutama ja milliseid vähem ning mispidi me mingeid alasid kaardil venitame või kokku surume. Kui tahame kujutada ümmargust Maad kahemõõtmelisel tasapinnal, siis paratamatult peame mingit osa maakerast moonutama. Ühe või teise projektsiooni valimisel moonutame rohkem kas pindalasid, nurkasid, kujusid või joonpikkuseid.
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/projections} 
+
+}
+
+\caption{[Erinevad projektsioonid](https://i.redd.it/8ssm7hfbeko21.png)}\label{fig:projections}
+\end{figure}
+
+Projektsioonid jagunevad üldisteks tüüpideks selle järgi, kas ruumilist maakera üritatakse projitseerida silindrile, koonusele või tasandile. Need üldised tüübid jaotatakse omakorda selle järgi, kuidas vastav siirdepind on maaellipsoidi suhtes orienteeritud (normaal-, põik- või kaldaspekt).
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth,height=1\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/projektsiooniklassid} 
+
+}
+
+\caption{Projektsioonitüübid [@Aunap2019 : 169]}\label{fig:projektsioonipered}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.7\linewidth,height=0.7\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/mathigontweet} 
+
+}
+
+\caption{Projektsioonide vahetamine [twitter.com/MathigonOrg](https://twitter.com/MathigonOrg/status/1308407528057901065)}\label{fig:mathigontweet}
+\end{figure}
+
+Lisaks n-ö kolmele geomeetrilisele põhiklassile on projektsioonide hulgas lisaks ka pseudoklasse, mis säilitavad ainult põhiklassi mõne tunnuse.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.7\linewidth,height=0.7\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/uuemaabonne} 
+
+}
+
+\caption{Bonne'i pseudokooniline projektsioon, mille keskmesse on pandud Tartu [twitter.com/evelynuuemaa](https://twitter.com/evelynuuemaa/status/1196353283696316416)}\label{fig:bonneprojection}
+\end{figure}
+
+Erinevatest projektsioonidest räägime kursuse jooksul lähemalt veel.
+
+Lõpetuseks. GIS-tarkvarades kohtad mõistet \textbf{koordinaatide referentssüsteemi} (CRS - \emph{Coordinate reference system}), mis koosneb daatumist ehk Maa matemaatilisest mudelist ja projektsioonist, mis konverteerib geograafilised koordinaadid tasapinnalisteks koordinaatideks.
+
+\hypertarget{veebipuxf5hised-kaardirakendused}{%
+\section{Veebipõhised kaardirakendused}\label{veebipuxf5hised-kaardirakendused}}
+
+Alati ei pea kaardi tegemiseks õppima põhjalikult tundma geoinfosüsteemide hingeelu ning kasutama mingit GIS-tarkvara. Veebis on valmis kaardirakendusi, mis võimaldavad teha ruumiandmete päringuid ja lihtsamaid analüüse (nt leia lühim/kiireim teekond punktist A punkti B), ilma et peaksid ise kaartide koostamise ja kujundamisega liiga palju vaeva nägema. Lisaks pakuvad mõned platvormid lisaks platvormi kaudu leitava info kasutamisele võimalust integreerida nendega ka enda andmeid ning kas või luua uusi ruumiandmeid. Lisaks sellele, et on võimalik enda andmeid n-ö olemasolevas süsteemis kuvada, pakuvad mõned platvormid võimalust ka ise aluskaardi tegemisel kaasa lüüa. Sellised on näiteks OpenStreetMap, WikiMapia ja Here WeGo, mis töötavad sarnaselt Vikipeediale: kasutajad saavad kaardi informatiivsust ja kvaliteeti ise parandada, lisades kaardile hooneid, teid jm objekte ning täiendades või parandades olemasolevate objektide infot.
+
+Selles praktikumis vaatleme eelkõige veebirakendusi, mis võimaldavad teha lihtsamaid kaarte, mida võib siis esitada kas veebis või trükitult. Spetsiifiliselt veebilehtedel esitatavate kaartide tegemise võimalusi vaatame kursusel pisut hiljem.
+
+Ilmselt kõige tuntum ja laialdasemalt kasutatav kaardirakendus on Google Maps, mille pakutavate teenuste hulka kuuluvad näiteks teekondade planeerimine (erinevate liiklusvahenditega), navigeerimissüsteem, liiklusinfo kuvamine, tänavate panoraamvaated, teatud kohtades ka veealused panoraamvaated ja siseruumide vaated, 45-kraadised aerofotod jm. Google Maps pakub ka võimalust võrdlemisi lihtsalt kuvada sobival aluskaardil enda andmeid. Seda võimalust vaatamegi esmalt lähemalt.
+
+Vaatame sel korral koos esmalt just \textbf{\href{https://www.google.com/mymaps/}{Google Mapsi}} võimalusi ja seejärel võrdlete neid iseseisvalt teiste analoogsete rakendustega. Need on väga üldised kaardirakendused, mida kasutatakse kõiksugu erinevate teemakaartide loomiseks. Humanitaarteadlastele võiks eraldi aga pakkuda huvi ka pigem nende jaoks tehtud platvormid, nagu näiteks \href{http://hdlab.stanford.edu/palladio/}{Palladio}.
+
+\hypertarget{google-my-maps}{%
+\subsection{Google My Maps}\label{google-my-maps}}
+
+Google My Maps on hea ja kiire variant vähenõudlikule kasutajale, kel on vaja koostada mingi teema kohta kaart, aga ei ole aega, et selleks spetsiaalselt mingit korralikku GIS-tarkvara kasutama õppida.
+
+Kõige olulisemaks miinuseks on mõistagi see, et kasutajal on väga vähe kontrolli selle üle, missugune tema kaart välja näeb ja kuidas GM tema ruumiandmetega käitub. Samuti ei ole võimalik veebirakenduses oma ruumiandmeid analüüsida rohkem, kui arvutada võrdlemisi robustselt vahemaid ja teekondi.
+
+Veebirakendus nõuab, et sul oleks Google'i konto.
+
+Vaatame näitena üht väikest osa 19. sajandi teise poole Lõuna-Eesti vallakohtuprotokollidest, mille 2000. aastatel sisestas digitaalsel kujul Tõnis Türna (Rahvusarhiiv). 2016. aastal taastati algselt \emph{\url{http://www.history.ee/vallakohus}} lehel olnud protokollid veebiarhiivide põhjal ning katsetati nende peal eesti keele automaatset morfoloogilist analüsaatorit. Morfoloogilise analüsaatori ülesandeks on tunda ära sõnavorm ning pakkuda sellele sõnaraamatukuju, sõnaliigi, vormiinfot jm.
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/vallakohtuprotokoll} 
+
+}
+
+\caption{Vallakohtuprotokolli näide xml-kujul [@Pilvik2019]}\label{fig:protokoll}
+\end{figure}
+
+Automaatses analüüsis tundmatuteks jäänud sõnavormide osakaal on umbkaudseks indikaatoriks sellele, kui eripärane oli vastava protokolli keel tänapäeva keelest.
+
+Saame lisada ka erinevaid andmekihte, näiteks Maa-ameti Geoportaalist alla laetavad maakonnapiirid (shp-formaadi oleme eelnevalt konverteerinud kml-failiks).
+
+NB! Suuri faile ei saa lisada: 5Mb piir, mis sisuliselt jätab väga suure osa võimalikest ruumiandmetest välja.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps1} \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps2} 
+
+}
+
+\caption{Kaardi tegemine Google My Mapsis (1)}\label{fig:mymaps1}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps3} \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps4} 
+
+}
+
+\caption{Kaardi tegemine Google My Mapsis (2)}\label{fig:mymaps2}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps5} \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps6} 
+
+}
+
+\caption{Kaardi tegemine Google My Mapsis (3)}\label{fig:mymaps3}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps7} \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps8} 
+
+}
+
+\caption{Kaardi tegemine Google My Mapsis (4)}\label{fig:mymaps4}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps9} \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps10} 
+
+}
+
+\caption{Kaardi tegemine Google My Mapsis (5)}\label{fig:mymaps5}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps11} \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps12} 
+
+}
+
+\caption{Kaardi tegemine Google My Mapsis (6)}\label{fig:mymaps6}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps13} \includegraphics[width=0.5\linewidth,height=1\textheight]{imgs/okt01_gif/gmaps14} 
+
+}
+
+\caption{Kaardi tegemine Google My Mapsis (7)}\label{fig:mymaps7}
+\end{figure}
+
+\hypertarget{uxfclesanne-1}{%
+\subsection{Ülesanne}\label{uxfclesanne-1}}
+
+Võrdle Google Mapsi teiste sarnaste platvormidega, nagu HERE WeGo (\href{https://mapcreator.here.com}{HERE Map Creator}), \href{https://www.pinmaps.net/mymaps/}{PinMaps}, \href{https://www.scribblemaps.com/}{Scribble Maps} või \href{https://www.zeemaps.com/}{ZeeMaps}. Võid julgelt kasutada ka Google'i abi (Vikipeedias näiteks on enamasti rakenduste funktsioonide loetelu ja ajoon üsna täpselt kirjeldatud). Abiks võib olla ka \href{https://en.wikipedia.org/wiki/Comparison_of_web_map_services}{see tabel}.
+
+Lisa \href{https://padlet.com/maarjaliisapilvik/n1tpoyussyalbsc6}{Padletisse} testitud rakenduse kohta järgmist infot:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Ligipääsetavus\\
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  kas rakenduse kasutamiseks peab registreerima?
+\item
+  kas mingite funktsioonide kasutamiseks peab maksma?\\
+\item
+  kas kasutamises on regionaalseid eripärasid? (mingid funktsioonid näiteks Eestis ei tööta või kaardi detailsusaste on väiksem)\\
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  Kasutatavus
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  kui intuitiivne on kasutajaliides?
+\item
+  milliseid funktsioone rakendus pakub?\\
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  Seosed teiste andmebaaside ja rakendustega
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  milliseid teisi platvorme ja andmebaase on rakendusse integreeritud?\\
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{3}
+\tightlist
+\item
+  Muu
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  kui paljusid aluskaardi kihte on võimalik kuvada?\\
+\item
+  kas on võimalik lisada objekte?
+\item
+  kas on võimalik importida andmetabeleid?
+\item
+  millised piirangud andmetele on (nt formaat, failide maht jms)?
+\item
+  millised on ekspordivõimalused?
+\item
+  \ldots{}
+\end{itemize}
+
+Kui sul õnnestub teha mingite andmetega ka kaart, mida eksportida või jagada, siis võiksid panna ka selle oma sissekande juurde.
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth,height=1\textheight]{C:/Users/a71386/Desktop/GeoHum/andres/geohumcourse/imgs/rakendustevordlus} 
+
+}
+
+\caption{Kaardirakenduste võrdlus}\label{fig:rakendused}
+\end{figure}
+
+\hypertarget{juxe4rgmisel-korral-2}{%
+\section{Järgmisel korral}\label{juxe4rgmisel-korral-2}}
+
+Esmaspäeval mõtiskleme veidi laiemalt kaartide mõiste üle ning uurime, kuidas saab kaardi abil lugusid jutustada (\emph{Story Maps}).
 
   \bibliography{kirjandus.bib}
 
