--- a/index.Rmd
+++ b/index.Rmd
@@ -1,8 +1,6 @@
 --- 
 title: "HVHV.00.001 Geoinfosüsteemide rakendusvõimalused humanitaarteadustes"
 author: "Andres Kimber, Maarja-Liisa Pilvik"
-header-includes: 
-  - \renewcommand\refname{Kirjandus}
 date: "sügis 2020"
 site: bookdown::bookdown_site
 output:
@@ -14,6 +12,7 @@ description: ""
 link-citations: yes
 bibliography: kirjandus.bib
 csl: ./harvard-european-archaeology.csl 
+always_allow_html: true
 
 --- 
 
