--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -179,3 +179,10 @@ pages = {139--158},
 title = {{Möistus sai kuulotedu: 19. sajandi vallakohtuprotokollide tekstidest digitaalse ressursi loomine}},
 year = {2019}
 }
+@misc{Aunap2019,
+author = {Raivo Aunap},
+title = {{Geodeetilised alused}},
+booktitle = {Geoinformaatika},
+pages = {125--182},
+year = {2019}
+}
